--- a/views/formulario.erb
+++ b/views/formulario.erb
@@ -8,9 +8,9 @@
  <input type='text' name='alto'>
 <br>
 <br>
- Ingrese posicion Inicial en X:
+ Ingrese posicion Inicial en X
  <input type='text' name='posIniX'>
- en Y:
+ en Y
  <input type='text' name='posIniY'>
 <br>
 <br>
