--- a/views/formulario.erb
+++ b/views/formulario.erb
@@ -1,4 +1,6 @@
 <h1>Bienvenido al juego</h1>
+La cantidad de Autos es  <%=@cantAutos%>
+
 <form method='post' action='/datos'>
  Ingrese ancho
  <input type='text' name='ancho'>
