--- a/views/index.erb
+++ b/views/index.erb
@@ -1,24 +1,37 @@
 <h1 align="center"> Bienvenido al juego </h1>
-<form method='post' action='/formulario' align="center">
-  Ingrese cantidad de tablero
-  <select name="sizes" id = "sizes">
+<form method='post' action='/cantAutos' align="center">
+  Ingrese cantidad de autos
+  <select name="autos" id = "autos" value=<%@cantidad_de_autos%>>
     <option value="1" selected >1</option>
     <option value="2">2</option>
     <option value="3">3</option>
     <option value="4">4</option>
     <option value="5">5</option>
-    <option value="6">6</option>
   </select>
+  <input type="submit" value="crear" name="btn_crear" id="btn_crear">
   <br>
   <br>
+</form>
+<form method='post' action='/formulario' align="center">
   Ingrese dimensiones de tablero
   <select name="sizes" id = "sizes">
     <option value="5">5x5</option>
     <option value="6">6x6</option>
     <option value="7">7x7</option>
-    <option value="8" selected >8x8</option>
+    <option value="8" selected>8x8</option>
     <option value="9">9x9</option>
     <option value="10">10x10</option>
   </select>
+  <br>
+  <br>
+  <br>
+  <% for index in 1..@cantidad_de_autos.to_i %>
+    <label>Auto #<%=index%></label>
+    <input id ="auto<%=index%>" name="auto<%=index%>" type="text" placeholder="nombre">
+    <input id ="auto<%=index%>" name="auto<%=index%>" type="text" placeholder="posicion en X">
+    <input id ="auto<%=index%>" name="auto<%=index%>" type="text" placeholder="posicion en Y">
+    <br>
+    <br>
+  <% end %>
   <input type='submit' value='Empezar A Jugar'>
 </form>
