--- a/views/datos.erb
+++ b/views/datos.erb
@@ -1,3 +1,4 @@
+<body style="background-color:Black;border:2px solid Tomato;color:White;">
 <div align ="center">
 
 <br>
@@ -101,3 +102,4 @@ Ingrese instrucciones:
 </tr>
 </table>
 </div>
+</body>
