--- a/views/formulario.erb
+++ b/views/formulario.erb
@@ -1,3 +1,4 @@
+<body style="background-color:Black;border:2px solid Tomato;color:White;">
 <h1>Bienvenido al juego</h1>
 La cantidad de Autos es  <%=@cantAutos%>
 <form method='post' action='/datos'>
@@ -15,3 +16,5 @@ La cantidad de Autos es  <%=@cantAutos%>
   <br>
   <input type='submit' value='Guardar'>
 </form>
+
+</body>
