--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<h1 align="center"> Bienvenido al juego </h1>
+<body  style="background-color:Black;border:2px solid Tomato;color:White;">
+<h1 align="center" style="border:2px solid Tomato;"> Bienvenido al juego </h1>
 <form method='post' action='/cantAutos' align="center">
   Ingrese cantidad de autos
   <select name="autos" id = "autos" value=<%@cantidad_de_autos%>>
@@ -35,3 +36,4 @@
   <% end %>
   <input type='submit' value='Empezar A Jugar'>
 </form>
+</body>
