interfaz tablero, recibir instrucciones

--- a/views/main.erb
+++ b/views/main.erb
@@ -3,7 +3,7 @@
 <form method='post' action='/cantAutos' align="center">
   Ingrese cantidad de autos
   <select name="autos" id = "autos" value=<%@cantidad_de_autos%>>
-    <option value="1" selected >1</option>
+    <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
     <option value="4">4</option>
@@ -13,7 +13,7 @@
   <br>
   <br>
 </form>
-<form method='post' action='/formulario' align="center">
+<form method='post' action='/tablero' align="center">
   Ingrese dimensiones de tablero
   <select name="sizes" id = "sizes">
     <option value="5">5x5</option>
