--- a/views/tablero.erb
+++ b/views/tablero.erb
@@ -1,8 +1,8 @@
 <body style="background-color:Grey;;color:White;">
 <h1>Bienvenido al juego</h1>
 La cantidad de Autos es  <%=@cantAutos%>
-<br><br>
     <div id="tablero" >
+<br><br>
         <% for i in 1..@size %>
             <h5 style="color:#006E6D; left: <%=(100*i)+10%>px; top: 30px; position: absolute"><%=i%></h5>
         <% end %>
@@ -10,7 +10,9 @@ La cantidad de Autos es  <%=@cantAutos%>
             <h5 style="color:#006E6D; left: 50px; top:<%=(100*i)-15%>px; position: absolute"><%=i%></h5>
         <% end %>
         <% @tablero.getAutos.each do |a|  %>
-            <h5 style="color:#006E6D; left: <%=(200*a.getPosX)%>2px; top:<%=(200*a.getPosY)%>2px; position: absolute">AUTO</h5>
+        <%=a.getPosX%>
+        <%=a.getPosY%>
+            <h5 style="color:#006E6D; left: <%=(200*a.getPosX)%>px; top:<%=(200*a.getPosY)%>px; position: absolute"><%=a.getNombre%></h5>
         <% end %>
     </div>
 </body>
